--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "electron": "^37.2.0"
   },
   "dependencies": {
+    "uuid": "^11.1.0",
     "websocket": "^1.0.35",
     "ws": "^8.18.3"
   }
